--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     </span>
                     <div>
                       <p class="ml-2 text-gray-300">Birthday</p>
-                      <p class="ml-2 text-xl text-white">03/11/2003</p>
+                      <p class="ml-2 text-xl text-white">03/11/2002</p>
                     </div>
                   </div>
                 </div>
@@ -392,6 +392,72 @@
                 </div>
               </div>
               <!-- ends here  -->
+              <!-- progressbar8 goes here  -->
+              <div class="mb-5 lg:pl-8 mt-5">
+                <div class="flex justify-between mb-1">
+                  <span
+                    class="font-semibold text-xl text-[#526377] dark:text-[#A6A6A6]"
+                    >UI?UX DESIGN</span
+                  >
+                  <span
+                    class="font-semibold text-xl text-[#526377] dark:text-[#A6A6A6]"
+                    >70%</span
+                  >
+                </div>
+                <div
+                  class="w-full bg-[#424141] rounded-full h-1 dark:text-[#1c1c1c]"
+                >
+                  <div
+                    class="bg-[#1fca86] h-1 rounded-full"
+                    style="width: 70%"
+                  ></div>
+                </div>
+              </div>
+              <!-- ends here  -->
+              <!-- progressbar9 goes here  -->
+              <div class="mb-5 lg:pl-8 mt-5">
+                <div class="flex justify-between mb-1">
+                  <span
+                    class="font-semibold text-xl text-[#526377] dark:text-[#A6A6A6]"
+                    >UI?UX Mockup Design</span
+                  >
+                  <span
+                    class="font-semibold text-xl text-[#526377] dark:text-[#A6A6A6]"
+                    >60%</span
+                  >
+                </div>
+                <div
+                  class="w-full bg-[#424141] rounded-full h-1 dark:text-[#1c1c1c]"
+                >
+                  <div
+                    class="bg-[#02af33] h-1 rounded-full"
+                    style="width: 60%"
+                  ></div>
+                </div>
+              </div>
+              <!-- ends here  -->
+              <!-- progressbar10 goes here  -->
+              <div class="mb-5 lg:pl-8 mt-5">
+                <div class="flex justify-between mb-1">
+                  <span
+                    class="font-semibold text-xl text-[#526377] dark:text-[#A6A6A6]"
+                    >UI?UX Wireframe Design</span
+                  >
+                  <span
+                    class="font-semibold text-xl text-[#526377] dark:text-[#A6A6A6]"
+                    >90%</span
+                  >
+                </div>
+                <div
+                  class="w-full bg-[#424141] rounded-full h-1 dark:text-[#1c1c1c]"
+                >
+                  <div
+                    class="bg-[#a4d41e] h-1 rounded-full"
+                    style="width: 90%"
+                  ></div>
+                </div>
+              </div>
+              <!-- ends here  -->
               <!-- ends here  -->
             </div>
             <!-- ends here  -->
@@ -404,8 +470,21 @@
                   Education
                 </h1>
               </div>
+              <!-- Education 1  -->
               <div class="border-2 border-[#424141] rounded sm:pr-32 mt-5">
-                <p class="text-gray-400 ml-4 pt-3">2016-2018</p>
+                <p class="text-gray-400 ml-4 pt-3">2012-2014</p>
+                <div class="text">
+                  <p class="text-white sm:text-xl text-[20px] ml-4 pt-2 mb-3">
+                    Secondary School Education<br />
+                    <span class="text-gray-400 class text-[16px]"
+                      >Degree College Aliabad Hunza Pakistan</span
+                    >
+                  </p>
+                </div>
+              </div>
+              <!-- Education 2  -->
+              <div class="border-2 border-[#424141] rounded sm:pr-32 mt-5">
+                <p class="text-gray-400 ml-4 pt-3">2014-2016</p>
                 <div class="text">
                   <p class="text-white sm:text-xl text-[20px] ml-4 pt-2 mb-3">
                     Master of Computer Science (MSCS), Computer science<br />
@@ -422,24 +501,25 @@
                   <span class="ml-1">Experience</span>
                 </h1>
               </div>
+              <!-- Experience 1  -->
               <div class="border-2 border-[#424141] rounded sm:pr-32 mt-5">
-                <p class="text-gray-400 ml-4 pt-3">2019-2021</p>
+                <p class="text-gray-400 ml-4 pt-3">2020-2021</p>
                 <div class="text">
                   <p class="text-white text-xl ml-4 pt-2 mb-3">
-                    2 year of Experience<br />
+                    Currently Working IN<br />
                     <span class="text-gray-400 class text-[16px]"
-                      >Uconnect Gilgit Pakistan</span
+                      >Franski Enterprises Gilgit Pakistan</span
                     >
                   </p>
                 </div>
               </div>
               <div class="border-2 border-[#424141] rounded sm:pr-32 mt-5">
-                <p class="text-gray-400 ml-4 pt-3">2022-2023</p>
+                <p class="text-gray-400 ml-4 pt-3">2017-2019</p>
                 <div class="text">
                   <p class="text-white text-xl ml-4 pt-2 mb-3">
-                    Intern<br />
+                    2 year of Experience<br />
                     <span class="text-gray-400 class text-[16px]"
-                      >Franski Enterprises Gilgit </span
+                      >Uconnect Gilgit Pakistan</span
                     >
                   </p>
                 </div>
